tests/testData/highlighting/annotator/macroCallWithoutParen.test.vm
#macro(mymacro $p1)
#end

<error descr="Will be considered as macro call, '(' expected">#mymacro</error>
#mymacro(6)
#nomacro

<error descr="Will be considered as macro call, '(' expected">#{mymacro}</error>
#{mymacro} (6)
#{nomacro}
